--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,7 +6,9 @@ author_profile: true
 ---
 
 {% include base_path %}
-
+<!-- コメントアウトしたい内容 -->
+<!-- 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+-->
